# MetaSleepGuard

./: .gitignore  CHANGELOG_METABCI_INTEGRATION.md  DUAL_ENVIRONMENT_GUIDE.md  LICENSE  METABCI_CORE_USAGE_EXPLANATION.md  METABCI_SLEEP_EXTENSION.md  README.md  THIRD_PARTY_NOTICES.md  __init__.py  config.yaml  environment.yml  metabci_integration.py  pyproject.toml  requirements-brainstim.txt  requirements-hardware.txt  requirements.txt  requirements_notes.md  run.ps1
brainstim_task/: __init__.py  calibration_task.py  lsl_marker.py  task_config.yaml
datasets/: __init__.py
docs/: CURRENT_STATUS.md  DATA_LIMITATIONS.md  DEMO_GUIDE.md  EXPERIMENT_PROTOCOL.md  ISRUC_NEMAR_VALIDATION.md  README.md
evidence/: sleep_edf_15_subject_ablation.json  sleep_edf_15_subject_validation.json  sleep_edf_30_subject_validation.json
examples/: metabci_sleep_biomedical_pipeline.py  metabci_sleep_openbci_worker.py  metabci_sleep_quickstart.py
experiments/: __init__.py  common.py  download_isruc.py  download_sleep_edf_subset.py  run_bdf_fif_audit.py  run_brainstim_calibration.py  run_cross_dataset.py  run_eval.py  run_evidence_boost.py  run_generate_report.py  run_isruc_validation.py  run_metabci_integration_test.py  run_metabci_sleep_extension_smoke.py  run_metabci_status.py  run_openbci_file_replay.py  run_openbci_realtime.py  run_prepare_data.py  run_public_sleep_real_baseline.py  run_real_openbci_reports.py  run_submission_pack.py  run_train.py
features/: __init__.py  causal_context.py  entropy_features.py  fractal_features.py  frequency_features.py  hjorth_features.py  time_features.py
metabci_sleep/: __init__.py
(+81 files in other folders)
